Added Facebook and Twitter dependencies

--- a/hs-mobile-chat-app/Podfile
+++ b/hs-mobile-chat-app/Podfile
@@ -5,7 +5,9 @@
 
 pod 'Firebase/Auth'
 pod 'Firebase/Messaging'
+pod 'FBSDKLoginKit'
 pod 'GoogleSignIn'
+pod 'TwitterKit'
 
 
 target 'hs-mobile-chat-app' do
