Adding pod for chat and implementing chat view screen

--- a/hs-mobile-chat-app/Podfile
+++ b/hs-mobile-chat-app/Podfile
@@ -8,7 +8,7 @@ pod 'Firebase/Messaging'
 pod 'FBSDKLoginKit'
 pod 'GoogleSignIn'
 pod 'TwitterKit'
-
+pod 'JSQMessagesViewController'
 
 target 'hs-mobile-chat-app' do
 
