Added Custom Buttons for Facebook and Twitter

--- a/hs-mobile-chat-app/hs-mobile-chat-app/Info.plist
+++ b/hs-mobile-chat-app/hs-mobile-chat-app/Info.plist
@@ -72,5 +72,24 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>Fabric</key>
+    <dict>
+        <key>APIKey</key>
+        <string>5ef1abae6facb31b443ab79e61e3f2cc64725a91</string>
+        <key>Kits</key>
+        <array>
+            <dict>
+                <key>KitInfo</key>
+                <dict>
+                    <key>consumerKey</key>
+                    <string>4RwYP0VbsgWTHuLVIdU2P9zXv</string>
+                    <key>consumerSecret</key>
+                    <string>64Jc8dLJthSn4cRckxQ6QBchKbUsxJtflnRUcC1hFChhrA4qsp</string>
+                </dict>
+                <key>KitName</key>
+                <string>Twitter</string>
+            </dict>
+        </array>
+    </dict>
 </dict>
 </plist>
