Changing bundle id and reconfigure url scheme types

--- a/hs-mobile-chat-app/hs-mobile-chat-app/Info.plist
+++ b/hs-mobile-chat-app/hs-mobile-chat-app/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -31,7 +33,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.564555495297-vfog38gshgk3v0jadno13t6afqtu0hup</string>
+				<string>com.googleusercontent.apps.564555495297-tdlisur8bamo24asfi6opt6vr5k36ru1</string>
 			</array>
 		</dict>
 		<dict>
@@ -39,7 +41,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.matheus.tasks.hs-mobile-chat-app</string>
+				<string>com.vanhackaton.MVL</string>
 			</array>
 		</dict>
 	</array>
@@ -77,6 +79,11 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>OpenSans-Regular.ttf</string>
+		<string>OpenSans-Bold.ttf</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
@@ -92,13 +99,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>CFBundleDisplayName</key>
-	<string></string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>OpenSans-Regular.ttf</string>
-		<string>OpenSans-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
