fixed google plist

--- a/hs-mobile-chat-app/hs-mobile-chat-app/GoogleService-Info.plist
+++ b/hs-mobile-chat-app/hs-mobile-chat-app/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>564555495297-vfog38gshgk3v0jadno13t6afqtu0hup.apps.googleusercontent.com</string>
+	<string>564555495297-tdlisur8bamo24asfi6opt6vr5k36ru1.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.564555495297-vfog38gshgk3v0jadno13t6afqtu0hup</string>
+	<string>com.googleusercontent.apps.564555495297-tdlisur8bamo24asfi6opt6vr5k36ru1</string>
 	<key>API_KEY</key>
 	<string>AIzaSyArAVhZ32mcb9b3K_2AWjCadStVdm-u3E4</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.matheus.tasks.hs-mobile-chat-app</string>
+	<string>com.vanhackaton.MVL</string>
 	<key>PROJECT_ID</key>
 	<string>hs-mobile-chat-app</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:564555495297:ios:850410ac412fab45</string>
+	<string>1:564555495297:ios:ce08f673ea487b51</string>
 	<key>DATABASE_URL</key>
 	<string>https://hs-mobile-chat-app.firebaseio.com</string>
 </dict>
